# parallel101-hw

./: .gitignore  README.md
hw02/: main.cpp
hw03/: main.cpp
hw04/: CMakeLists.txt  main.cpp  main1.cpp
